Change description in parent pom - issue #1

--- a/seip2019/pom.xml
+++ b/seip2019/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Seip2019</name>
-  <description>Assignment</description>
+  <description>Assignments for the lab courses of the Seip2019 lesson</description>
   <modules>
   	<module>gradeshistogram</module>
   </modules>
