--- a/seip2019/metricsCalculator/pom.xml
+++ b/seip2019/metricsCalculator/pom.xml
@@ -1,11 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>gr.aueb.dmst</groupId>
-    <artifactId>seip2019</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>metricsCalculator</artifactId>
-  <name>MetricsCalculator</name>
-  <description>Java application that reads a .java file and produces the following metrics: Lines of Code, Number of Classes, Number of Methods </description>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>gr.aueb.dmst</groupId>
+		<artifactId>seip2019</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>metricsCalculator</artifactId>
+	<name>MetricsCalculator</name>
+	<description>Java application that reads a .java file and produces the following metrics: Lines of Code, Number of Classes, Number of Methods </description>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>metricsCalculator.AnalyzerDEMO</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
