Add the module reference in POM - issue #7

--- a/seip2019/pom.xml
+++ b/seip2019/pom.xml
@@ -8,5 +8,7 @@
   <description>Assignments for the lab courses of the Seip2019 lesson</description>
   <modules>
   	<module>gradeshistogram</module>
+  	<module>metricsCalculator</module>
+  	<module>testingSuite</module>
   </modules>
 </project>
