--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script: cd seip2019/
 
 script:
  - mvn clean package jacoco:report
+ - script: "mvn cobertura:cobertura"
  
  after_success:
   - bash <(curl -s https://codecov.io/bash) -t 64f2b480-10a6-4b98-b19d-215b6f44a0e9
