--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ jdk:
 before_script: cd seip2019/
 
 script:
- - mvn clean package jacoco:report
- - script: "mvn cobertura:cobertura"
+ - mvn clean package jacoco:report cobertura:cobertura
  
- after_success:
-  - bash <(curl -s https://codecov.io/bash) -t 64f2b480-10a6-4b98-b19d-215b6f44a0e9
+after_success:
+ - bash <(curl -s https://codecov.io/bash) -t 64f2b480-10a6-4b98-b19d-215b6f44a0e9
